ktorrent uses kwidgetitemdelegate in a way that broke with making it possible to delete the delegate without simultanously removing the view. It passes the view as parent and view into KWidgetItemDelegate(QAbstractItemView *itemView, QObject *parent = 0). When the view is deleted, the delegate will be deleted in the qobject destructor that deletes the view children. This leads to double deletion of the widgets created by kwidgetitemdelegate, since they are reparented by the view. This patch makes ktorrent work again.

BUG: 233783

svn path=/trunk/KDE/kdelibs/; revision=1122087